<fronend> fix overflow-x

--- a/front-end/styling/classworkPage.css
+++ b/front-end/styling/classworkPage.css
@@ -1,5 +1,6 @@
 body{
   min-width:100vw ;
+  overflow-x: hidden;
 }  
   
   .navbar {
